--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-weight: 100;
 }
 .main-container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin-top: 10px;
 }
 a {
@@ -34,7 +34,7 @@ header {
   column-gap: 30px;
   align-items: center;
   padding: 0 10px;
-  margin-top:100px;
+  margin-top: 100px;
 }
 
 .header-content h3 {
@@ -99,6 +99,9 @@ header {
   }
   .header-picture img {
     border-radius: 10px;
+  }
+  .header-stars p span {
+    margin-left: -120px;
   }
 }
 /* services */
@@ -196,6 +199,31 @@ header {
   text-align: center;
   line-height: 30px;
   font-weight: 100;
+}
+/* solutions */
+.solutions {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  max-width: 1000px;
+  justify-content: center;
+  height: 300px;
+  align-items: center;
+  column-gap: 40px;
+}
+.solutions .solution {
+  padding: 15px;
+}
+.solutions .solution h3 {
+  margin-bottom: 20px;
+  font-style: italic;
+  font-weight: 200;
+  font-size: 25px;
+  text-align: center;
+  color: red;
+}
+.solutions .solution p {
+  line-height: 1.5;
+  padding: 10px;
 }
 /* customer-ratings */
 .customer-ratings {
