--- a/css/style.css
+++ b/css/style.css
@@ -336,3 +336,59 @@ footer li {
   color: red;
   margin-left: 10px;
 }
+/* mission */
+.mission {
+  min-height: 400px;
+  max-width: 1000px;
+  padding: 0 30px;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-content: center;
+  row-gap: 20px;
+  margin-bottom: 30px;
+}
+.mission h3 {
+  color: red;
+}
+.mission ul {
+  list-style: none;
+}
+.mission ul li:before {
+  content: "✓";
+  padding-right: 10px;
+}
+.mission ul li {
+  color: black;
+  margin: 10px 0;
+}
+@media screen and (min-width: 600px) {
+  .mission {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.about-state {
+  display: block;
+  max-width: 1000px;
+  padding: 0 10px;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+.about-state h3 {
+  color: red;
+  margin: 20px 0 10px 0;
+  text-align: center;
+  padding: 10px;
+}
+.about-state p {
+  line-height: 2;
+}
+.give-call {
+  text-align: center;
+  color: red;
+  margin-bottom: 30px;
+}
+.give-call h2 {
+  text-transform: uppercase;
+  margin: 20px 0;
+}
