--- a/css/services.css
+++ b/css/services.css
@@ -11,6 +11,9 @@ body {
   font-size: 18px;
   font-weight: 100;
 }
+header {
+  margin-top: 120px;
+}
 header h4 {
   text-align: center;
   color: rgb(206, 20, 20);
